@@ -1,3 +1,8 @@
+2011-09-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR inline-asm/50571
+	* gcc.dg/pr50571.c: New test.
+
 2011-09-26  Jason Merrill  <jason@redhat.com>
 
 	PR c++/46105
